# spud-coach

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_dataset.py  pyproject.toml  server.json  unpack_pck.py
brotato_coach/: answers.py  bestiary.py  calc.py  dataset.py  evaluate.py  orientation.py  runfile.py  scene.py  schemas.py  server.py
brotato_coach/builders/: achievements.py  characters.py  classifications.py  discover.py  enemies.py  items.py  localization.py  mechanics.py  procs.py  sets.py  timestamps.py  waves.py  weapons.py
docs/: cadence-mechanics.md  dlc-incorporation-playbook.md  dps-engine.md  extraction-setup.md  proc-mechanics.md  roadmap.md  run-postmortem-methodology.md  stat-mechanics.md  weapon-merge-dps-methodology.md
docs/superpowers/plans/: 2026-07-01-brotato-coach-theorycrafter.md  2026-07-04-mcp-registry.md  2026-07-05-auto-detect-game-version.md  2026-07-05-burn-proc-and-stat-range.md  2026-07-05-landing-page-content-expansion.md  2026-07-05-proc-worklist-triage.md  2026-07-06-read-me-tool.md  2026-07-09-weapon-cadence-reporting.md  2026-07-13-class-bonus-modeling.md
docs/superpowers/research/: 2026-07-05-family-conditional-buffs.md  2026-07-05-family-crit-riders.md  2026-07-05-family-lightning.md  2026-07-05-family-misc-blank.md  2026-07-05-family-projectiles-on-hit.md  2026-07-05-family-slows-cc.md  2026-07-05-family-stat-riders.md  2026-07-05-proc-worklist-brief.md
docs/superpowers/specs/: 2026-07-04-mcp-registry-design.md  2026-07-04-pypi-publish-design.md  2026-07-05-auto-detect-game-version-design.md  2026-07-05-landing-page-content-expansion-design.md  2026-07-05-landing-page-design.md  2026-07-05-proc-worklist-triage-design.md  2026-07-06-bestiary-awareness-design.md  2026-07-06-read-me-tool-design.md  2026-07-09-weapon-cadence-reporting-design.md  2026-07-13-class-bonus-modeling-design.md  2026-07-13-stat-aware-dps-engine-design.md
plugin/: .mcp.json
site/: index.html  style.css
tests/: test_answers.py  test_bestiary.py  test_build_achievements.py  test_build_characters.py  test_build_classifications.py  test_build_dataset_paths.py  test_build_discover.py  test_build_enemies.py  test_build_items.py  test_build_localization.py  test_build_timestamps.py  test_build_waves.py  test_build_weapons.py  test_calc.py  test_dataset.py  test_diff_dataset.py  test_evaluate.py  test_mechanics.py  test_orientation.py  test_run_report.py  test_runfile.py  test_scene.py  test_server.py  test_shipped_dataset.py  test_smoke.py
tools/: brotato_inspect.py  diff_dataset.py  gather_achievements.py
