[project]
name = "brotato-coach"
version = "0.1.0"
description = "Deterministic theorycrafter core + MCP server for a Brotato AI coach"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["mcp>=1.2.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brotato_coach"]
