[project]
name = "spudcoach"
version = "0.2.0"
description = "Deterministic Brotato theorycrafter core + MCP server (spud coach)"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
spudcoach = "brotato_coach.server:main"

[project.urls]
Homepage = "https://spudcoach.fyi"
Repository = "https://github.com/BrendanL79/spud-coach"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brotato_coach"]
