[project]
name = "spudcoach"
version = "0.13.0"
description = "Deterministic Brotato theorycrafter core + MCP server (spud coach)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
spudcoach = "brotato_coach.server:main"

[project.urls]
Homepage = "https://spudcoach.fyi"
Repository = "https://github.com/brendanlefebvre/spud-coach"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.20",
]

[tool.ruff.lint]
# CodeRabbit's Assertive-profile rule families (docs.coderabbit.ai/tools/ruff),
# minus the pure style-opinion families that force churn without catching bugs:
# ANN (require annotations everywhere), FBT (boolean-trap), TRY (exception-
# message style), PLR (complexity/magic-value counters).
select = [
    "F", "B", "S", "BLE", "T10", "EXE", "RUF", "PLE", "A", "E4", "E7", "E9",
    "ASYNC", "C4", "DTZ", "ISC", "LOG", "G", "PIE", "PT", "FLY", "UP",
    "SIM", "PERF", "RET", "ARG", "PLW",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # pytest asserts
    "SIM115", # short-lived open() in test one-liners; process exit reclaims
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brotato_coach"]
